# dynamic-dependencies

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject-fmt.toml  pyproject.toml  readme.md  setup.py
.github/workflows/: release.yml
compat/setuptools/: pyproject.toml  readme.md
src/dynamic_dependencies/: __init__.py  calculate.py  config.py
src/dynamic_dependencies/integrations/: setuptools_.py
tools/: builds.py
