[build-system]
requires = [
    "dependency-groups~=1.3",
    "gitversion-simple[setuptools]~=2.0",
    "setuptools~=82.0",
    "tomli~=2.0; python_version<'3.11'",
    "typing-extensions~=4.14",
]

[project]
name = "dynamic-dependencies"
description = "Dependencies based on `dependency-groups'."
readme = "readme.md"
license = "Zlib"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dynamic = [ "dependencies", "optional-dependencies", "version" ]

[[project.authors]]
name = "Ярыкин Евгений"
email = "pypi@zedzhen.ru"

[project.urls]
source = "https://github.com/zedzhen/dynamic_dependencies"

[dependency-groups]
dev = [
    "black~=26.5",
    "build==1.5.*",
    "isort~=8.0",
    "pre-commit~=4.6",
    "pyproject-fmt~=2.25",
    "setuptools~=82.0",
    { include-group = "requires" },
]
requires = [
    "dependency-groups~=1.3",
    "tomli~=2.0; python_version<'3.11'",
    "typing-extensions~=4.14",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
src_paths = [ "src" ]

[tool.dynamic_dependencies]
require = "requires"
