[build-system]
requires = [
    "dynamic-dependencies~=1.0",
    "gitversion-simple[setuptools]~=2.0",
    "setuptools>=81",
]

[project]
name = "dynamic-dependencies-setuptools"
description = "setuptools entry points for dynamic_dependencies"
readme = "readme.md"
license = "Zlib"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dynamic = [ "version" ]

[[project.authors]]
name = "Ярыкин Евгений"
email = "pypi@zedzhen.ru"

[project.entry-points."setuptools.finalize_distribution_options"]
gitversion_simple = "dynamic_dependencies.integrations.setuptools_:finalize_distribution_options"

[project.urls]
source = "https://github.com/zedzhen/dynamic_dependencies"

[tool.gitversion_simple]
vcs_root = "../.."
